Activity 3: fix - aligning confession form components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -147,6 +147,12 @@ body {
   display: block;
   align-items: flex-end;
 }
+.confession__reason {
+  margin: 1rem;
+  display: block;
+  align-items: flex-end;
+}
+
 
 .confession__form--input {
   margin: 1rem;
